objects/ESC_QueueSelector_Email_id_List__mdt.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bu_Segment__c</fullName>
        <label>Bu Segment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_API_Names__c</fullName>
        <label>API Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Routing_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Routing Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Default_Queue__c</fullName>
        <label>Default Queue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Is_GLI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>stores the Is_GLI__c value for Case</description>
        <label>Is_GLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Proactive_Type__c</fullName>
        <label>Proactive_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Sales_Org__c</fullName>
        <description>Stores the value for Sales_Org__c field of case.</description>
        <label>Sales Org</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Search_Field_Set__c</fullName>
        <label>Search Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_SearchfieldCriteria__c</fullName>
        <label>SearchfieldCriteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                    <default>true</default>
                    <label>AND</label>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_To_Email_Address__c</fullName>
        <label>To Email Address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Title__c</fullName>
        <label>Product Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Bu__c</fullName>
        <label>Sub Bu/Region</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Queue Selector Email Id List</label>
    <listViews>
        <fullName>TA_All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>ESC_Is_GLI__c</columns>
        <columns>ESC_Sales_Org__c</columns>
        <columns>Sub_Bu__c</columns>
        <columns>ESC_To_Email_Address__c</columns>
        <columns>Bu_Segment__c</columns>
        <columns>ESC_API_Names__c</columns>
        <columns>ESC_Search_Field_Set__c</columns>
        <filterScope>Everything</filterScope>
        <label>TA - All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Queue Selector Email Id List</pluralLabel>
</CustomObject>